# agent_status_light

./: Cargo.toml  README.md
.claude/: settings.json
docs/: TECHNICAL_PLAN.md  USER_MANUAL.md
esp32c3_arduino/: esp32c3_arduino.ino
scripts/: package.sh
src/: ble.rs  cli.rs  config.rs  daemon.rs  hooks.rs  install.rs  ipc.rs  log_store.rs  main.rs  modes.rs  status_priority.rs
